<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3299BB"
    android:fillViewport="true">

<LinearLayout  android:layout_width="match_parent"
    android:id="@+id/linlay"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoview"
        android:background="@drawable/logo"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/whiteroundbox"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login"
            android:id="@+id/textView"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/loginbox"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="16dp"
            android:paddingLeft="6dp"
            android:textColor="#000000"
            android:text="@string/username"
            android:id="@+id/textView2"
            />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/logintextbox"
            android:layout_marginTop="5dp"
            android:singleLine="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="6dp"
            android:textColor="#000000"
            android:text="@string/password"
            android:id="@+id/textView3" />
        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:padding="6dp"

            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/logintextbox"
            android:layout_marginTop="5dp"

            android:imeActionLabel="@string/short_login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true"
            android:autoText="false" />

        <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/loggin"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:textColor="#FFFFFF"
            android:onClick="onClickLogin"
            android:background="@drawable/blue_button"
            android:textStyle="bold" />
        <Button android:id="@+id/registerbutton" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="5dp" android:text="@string/register"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/blue_button"
            android:onClick="onClickRegister"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>
</ScrollView>


